name:                myParsec
version:             0.1.0.0
synopsis:            not a real project, simply a test
description:         a sample parsec example
license:             MIT
-- license-file:        LICENSE
author:              b3b00
maintainer:          olivier.duhart@gmail.com
-- copyright:           
category:            playing with haskell/cabal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable myParsec
  main-is: 			   Main.hs 
  build-depends:       base >=4.9, parsec, containers
  default-language:    Haskell2010

Test-Suite boolExprTests
  type:                exitcode-stdio-1.0
  main-is:             BoolExprTests.hs
  build-depends:       base,  
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010  
  
Test-Suite intExprTests
  type:                exitcode-stdio-1.0
  main-is:             IntExprTests.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010    
  
Test-Suite stmtTests
  type:                exitcode-stdio-1.0
  main-is:             StmtTests.hs
  build-depends:       base,
                       parsec,
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010    